# vctts

./: .gitignore  CMakeLists.txt  README.md  app_audio_control.cpp  app_audio_control.h  app_state.h  audio_devices.cpp  audio_devices.h  audio_playback.cpp  audio_playback.h  controller.h  custom_tts.cpp  custom_tts.h  d3d11_renderer.cpp  d3d11_renderer.h  driver_setup.cpp  driver_setup.h  icon.rc  imgui.ini  imgui_ui.cpp  imgui_ui.h  incoming_translator.cpp  incoming_translator.h  keyboard_hook.cpp  keyboard_hook.h  main.cpp  mic_bridge.cpp  mic_bridge.h  native_ui.cpp  native_ui.h  overlay_window.cpp  overlay_window.h  test_custom.cpp  translator.cpp  translator.h  tts_keyless.cpp  tts_keyless.h  tts_sapi.cpp  tts_sapi.h  tts_winrt.cpp  (+3 more)
.github/workflows/: windows.yml
drivers/VirtualAudioDriver/: manifest.txt
scripts/: package_release.ps1
tests/: test_app_state.cpp  test_driver_setup.cpp
tests/include/: windows.h
